--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,10 @@ a:hover{
 }
 .navbar-brand{
     margin-left: 1em;
+    font-size: 1.5em;
+    font-family: 'Roboto', sans-serif;
+    color: #343a40;
+    font-weight: 900;
 }
 
 /* footer */
